Adding unit Test cases